# New-Advance--solana-ico

./: .env.local  .gitignore  CodeSetUp.txt  netlify.toml  next.config.js  package-lock.json  package.json
Contract/: 13LdgyTELwGqBjafbomzqDPcJjwKBthjufSLZSCwDJzn.json  2nh36ypUvSfBXy23an9VJSdaBdYypY9FDzECG3LCD4g7.json  Anchor.toml  README.md  Scythra Smart Contract.rs  package.json
Contract/programs/scythra_presale/: Cargo.toml
Contract/programs/scythra_presale/src/: lib.rs
Contract/tests/: initialize_presale.ts  scythra_presale.ts
components/: About.jsx  Admin.jsx  FAQ.jsx  Feature.jsx  Footer.jsx  HeroSection.jsx  NavBar.jsx  Partners.jsx  Process.jsx  Roadmap.jsx  ScythraApps.jsx  Token.jsx  index.js
idl/: idl.json
pages/: _app.js  index.js
test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-100-8w5qo686JeGcrMAoyxyUCbBL7KLKJSnW5LhWFJujQ3pQ.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
test-ledger/accounts/run/: 0.1
test-ledger/accounts/snapshot/100/: 100.0
test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1747771329918488  MANIFEST-000021  OPTIONS-000027  OPTIONS-000029
test-ledger/snapshot/100/: 100  status_cache
