[package]
name = "scythra_presale"
version = "0.1.0"
description = "Secure and optimized Solana presale contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "scythra_presale"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "1.17.0"
